添加模板生成模块代码

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>thread</module>
         <module>demo-xmind</module>
         <module>lambda</module>
+        <module>generation-template</module>
     </modules>
 
     <dependencies>
